Parallelized test task. Updated output to progress and validation/exception report to file.